# Gnote

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build  org.bil4x4.gnote.json
data/: gnote.gresource.xml  meson.build  org.bil4x4.gnote.appdata.xml.in  org.bil4x4.gnote.desktop.in  org.bil4x4.gnote.gschema.xml
data/icons/: meson.build
data/ui/: window.cmb  window.ui
po/: POTFILES  meson.build
src/: application.rs  config.rs  io.rs  logging.rs  main.rs  meson.build  note_manager.rs  test_data.rs  title_manager.rs  tree_manager.rs  tree_store.rs  ui_tools.rs  window.rs
src/tests/: gnote_tree_view.rs  mod.rs  test_data.rs
src/tools/: io.rs  logging.rs
src/ui/: action_buttons.ui  editor.ui  gnote.gresource.xml  tree_view.ui  window.ui
src/widgets/: gnote_action_buttons.rs  gnote_editor.rs  gnote_text_buffer.rs  gnote_tree_view.rs  mod.rs  window.rs
