[package]
name = "gnote"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5", package = "gtk4" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
base64 = "0.21.0"
tempfile = "3.5.0"

[dependencies.adw]
package = "libadwaita"
version = "0.2"
features = ["v1_2"]
